objects/BU_Specific_Information__c.object
<CustomObject>
    <description>This custom object holds BU specific information, which can be added to an opportunity.</description>
    <fields>
        <fullName>AC__c</fullName>
        <label>AC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Advanced_Control__c</fullName>
        <label>Advanced Control</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bottleneck_1__c</fullName>
        <description>Main reason that blocks the hunt from moving forward</description>
        <globalPicklist>Bottlenecks</globalPicklist>
        <inlineHelpText>Give a main reason that blocks the hunt from moving forward</inlineHelpText>
        <label>Bottleneck 1</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bottleneck_2__c</fullName>
        <description>Main reason that blocks the hunt from moving forward</description>
        <globalPicklist>Bottlenecks</globalPicklist>
        <inlineHelpText>Give a main reason that blocks the hunt from moving forward</inlineHelpText>
        <label>Bottleneck 2</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bottleneck_3__c</fullName>
        <description>Main reason that blocks the hunt from moving forward</description>
        <globalPicklist>Bottlenecks</globalPicklist>
        <inlineHelpText>Give a main reason that blocks the hunt from moving forward</inlineHelpText>
        <label>Bottleneck 3</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPM_MES__c</fullName>
        <label>CPM / MES</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Civil_Works__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Civil Works</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cold_Rolling_Mill__c</fullName>
        <label>Cold Rolling Mill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field for manual entry in case any of appropriate reason is not available in the bottleneck lists</description>
        <inlineHelpText>Add any relevant details or fill reason that was not available in the bottleneck lists</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complete_ErectComm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Complete Erect.-Comm.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Control_PSPG__c</fullName>
        <label>Control</label>
        <picklist>
            <picklistValues>
                <fullName>S+ DIN Harmony (SD series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S+ rack Harmony (HR series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S+ rack Melody (MR series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProControl P13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProControl P14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MGC600</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC160, AC450 (Advant Master)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC460 (Advant Mod)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC800M (800xA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <label>Control %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Control_and_Protection_Conventional__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Control and Protection (Conventional)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCS__c</fullName>
        <label>DCS</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC__c</fullName>
        <label>DC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drives_Systems__c</fullName>
        <label>Drives Systems</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrical__c</fullName>
        <label>Electrical %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Electrification__c</fullName>
        <label>Electrification</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Engineering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Engineering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GTSC__c</fullName>
        <label>GTSC</label>
        <picklist>
            <picklistValues>
                <fullName>Finland, Helsinki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy, Vittuone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden, Västerås</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland, Kleindöttingen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gate_stage_RMDR__c</fullName>
        <label>Gate stage</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-evalution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specification and service opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functional and reliability verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer piloting (optional)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HMI_PSPG__c</fullName>
        <label>HMI</label>
        <picklist>
            <picklistValues>
                <fullName>800xA Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S+ Operations HMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DigiVis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M+ Operations HMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other HMI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No HMI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HV_Equipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>HV Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Flat_Mill__c</fullName>
        <label>Hot Flat Mill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_O_PSPG__c</fullName>
        <label>I/O</label>
        <picklist>
            <picklistValues>
                <fullName>I/O (HR Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (S800 Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (S900 Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (MR Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (SD Series)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (Advant Rack)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (AC500 family)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I/O (MGC600)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other I/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No I/O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instrumentation__c</fullName>
        <label>Instrumentation %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KPM__c</fullName>
        <label>KPM</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MV_EquipmentAIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>MV Equipment(AIS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MV_EquipmentGIS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>MV Equipment(GIS)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metallurgy_Products__c</fullName>
        <label>Metallurgy Products</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motors_Solution__c</fullName>
        <label>Motors Solution</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motors__c</fullName>
        <label>Motors</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_terminal_requirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-terminal requirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Actuator__c</fullName>
        <label>New Actuator</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Frame__c</fullName>
        <label>New Frame</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Sensor__c</fullName>
        <label>New Sensor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Electrical_Unit__c</fullName>
        <label>No. Of Electrical Unit</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Units__c</fullName>
        <label>No. Of Units</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Circuit_Breakers__c</fullName>
        <description>Allows users to enter any combination of letters and numbers</description>
        <inlineHelpText>Please insert C.B. numbers in the format 5/12/15 with “/” as separator</inlineHelpText>
        <label>No. of Circuit Breakers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Power_Transformers__c</fullName>
        <description>Allows users to enter any number. Leading zeros are removed.</description>
        <label>No. of Power Transformers</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Substations__c</fullName>
        <description>Allows users to enter any number. Leading zeros are removed.</description>
        <label>No. of Substations</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Hard_I_Os__c</fullName>
        <label>Number Of Hard I/Os</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Soft_I_Os__c</fullName>
        <label>Number Of Soft I/Os</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Engineering_Stations__c</fullName>
        <label>Number of Engineering Stations</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Operator_Stations__c</fullName>
        <label>Number of Operator Stations</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Link to the Opportunity</description>
        <inlineHelpText>Link to the Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BU Specific Information</relationshipLabel>
        <relationshipName>BU_Specific_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PG_MV_drives_Assigned_TEC__c</fullName>
        <description>Refers to the Product Group System Drives Tendering and Execution Center that is assigned for this opportunity</description>
        <inlineHelpText>Refers to the Product Group System Drives Tendering and Execution Center that is assigned for this opportunity</inlineHelpText>
        <label>Assigned TEC</label>
        <picklist>
            <picklistValues>
                <fullName>Regional TEC EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional TEC MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional TEC Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional TEC Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global TEC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSPG_Add_1__c</fullName>
        <label>PSPG Add 1</label>
        <picklist>
            <picklistValues>
                <fullName>No Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation Sentinel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbon In Ash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flame Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFMaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerStore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simulation/Emulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PSPG_Add_2__c</fullName>
        <label>PSPG Add 2</label>
        <picklist>
            <picklistValues>
                <fullName>No Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automation Sentinel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carbon In Ash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condition Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flame Scanners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PFMaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PowerStore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simulation/Emulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Power_Distribution__c</fullName>
        <label>Power Distribution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Metals_Mill__c</fullName>
        <label>Primary Metals Mill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Electrification__c</fullName>
        <label>Process Electrification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Processing_Line__c</fullName>
        <label>Processing Line</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Profile_Mill__c</fullName>
        <label>Profile Mill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QCS__c</fullName>
        <label>QCS</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rated_Power_MW__c</fullName>
        <label>Rated Power [MW]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rated_Voltage_kV__c</fullName>
        <label>Rated Voltage [kV]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_list_Comment__c</fullName>
        <description>Allows users to enter up to 255 characters on separate lines.</description>
        <label>Reference list Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>R5</description>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Combustion Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyber Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC based solutions(Excitation, Synchronization)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBoP Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution 800xA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution Advant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution Harmony</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution Melody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution P13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution P14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evolution S+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GCB Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generator Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Check Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydro Generator Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Contract(Incl. Sentinel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protection Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Services Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Grid(Incl. Sentinal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spare Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Turnkey - Complete with Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered package, installation &amp; commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered package, Supervision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineered or Product package &amp; delivery (FOB, Site, etc.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service (excl. Extensions, Upgrades and Retrofits)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit / Extension - Engineered Package, install. &amp; comm.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit / Extension - with Civil</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station_Auxiliaries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Station Auxiliaries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steel_Strips__c</fullName>
        <label>Steel Strips</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stirrers_Brakes_for_Steel__c</fullName>
        <label>Stirrers &amp; Brakes for Steel</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stirrers_for_Aluminium__c</fullName>
        <label>Stirrers for Aluminium</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Substation_Automation_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Substation Automation System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supervision_of_ErectComm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to select a True (checked) or False (unchecked) value.</description>
        <label>Supervision of Erect.-Comm.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Systems__c</fullName>
        <label>Test Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Electrical_Size__c</fullName>
        <label>Total Electrical Size</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Size__c</fullName>
        <label>Total Size</label>
        <precision>9</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transformer_Voltage_Prim_Sec__c</fullName>
        <description>Allows users to enter any combination of letters and numbers</description>
        <inlineHelpText>Please insert voltages in the format 420/220 with “/” as separator</inlineHelpText>
        <label>Transformer Voltage Prim /Sec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transformer_rating_MVA__c</fullName>
        <description>Allows users to enter any number. Leading zeros are removed.</description>
        <label>Transformer rating (MVA)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tube_or_Pipe_Mill__c</fullName>
        <label>Tube or Pipe Mill</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>